intro header update

--- a/intro.html
+++ b/intro.html
@@ -265,7 +265,7 @@
             <div class="brand-title">TMR</div>
         </div>
         <div class="header-right">
-            <a class="header-text-btn" href="#Pricing">Pricing</a>
+            <a class="header-text-btn" href="#Pricing">Pricing (free?)</a>
             <a class="header-text-btn" href="#iphone">iPhone Setup</a>
             <a class="header-text-btn" href="#Android">Android Setup</a>
             <button id="continue-signin-top" class="tmr-btn small-tmr-btn" type="button">Sign In</button>
