--- a/TMR.html
+++ b/TMR.html
@@ -21,13 +21,15 @@
                             var accent2 = localStorage.getItem('tmr_user_' + lastUid + '_theme_accent_color') || localStorage.getItem('tmr_user_' + lastUid + '_tmr_accent') || null;
                             var bg2 = localStorage.getItem('tmr_user_' + lastUid + '_theme_bg_image') || localStorage.getItem('tmr_user_' + lastUid + '_tmr_bg_image') || null;
                             var anim2 = localStorage.getItem('tmr_user_' + lastUid + '_theme_animation') || null;
-                            var font2 = localStorage.getItem('tmr_user_' + lastUid + '_theme_font_family') || localStorage.getItem('tmr_user_' + lastUid + '_theme_font_family') || null;
-                            if (accent2 || bg2 || anim2 || font2) {
+                            var font2 = localStorage.getItem('tmr_user_' + lastUid + '_theme_font_family') || null;
+                            var bold2 = localStorage.getItem('tmr_user_' + lastUid + '_theme_bold_text') || null;
+                            if (accent2 || bg2 || anim2 || font2 || bold2) {
                                 raw = JSON.stringify({
                                     accentColor: accent2,
                                     backgroundImage: bg2,
                                     animation: anim2,
                                     fontFamily: font2,
+                                    boldText: bold2,
                                     updatedAt: Date.now()
                                 });
                                 try { localStorage.setItem('tmr_boot_theme', raw); } catch (_) {}
@@ -40,12 +42,14 @@
                             var aBg = localStorage.getItem('tmr_anon_theme_bg_image') || localStorage.getItem('tmr_anon_tmr_bg_image') || null;
                             var aAnim = localStorage.getItem('tmr_anon_theme_animation') || null;
                             var aFont = localStorage.getItem('tmr_anon_theme_font_family') || null;
-                            if (aAccent || aBg || aAnim || aFont) {
+                            var aBold = localStorage.getItem('tmr_anon_theme_bold_text') || null;
+                            if (aAccent || aBg || aAnim || aFont || aBold) {
                                 raw = JSON.stringify({
                                     accentColor: aAccent,
                                     backgroundImage: aBg,
                                     animation: aAnim,
                                     fontFamily: aFont,
+                                    boldText: aBold,
                                     updatedAt: Date.now()
                                 });
                                 try { localStorage.setItem('tmr_boot_theme', raw); } catch (_) {}
@@ -56,6 +60,8 @@
                 if (!raw) return;
                 var theme = JSON.parse(raw);
                 if (!theme || typeof theme !== 'object') return;
+
+                var root = document.documentElement;
 
                 var accent = (typeof theme.accentColor === 'string') ? theme.accentColor.trim() : '';
                 var accentRgb = (typeof theme.accentRgb === 'string') ? theme.accentRgb.trim() : '';
@@ -106,7 +112,6 @@
                     }
                 }
 
-                var root = document.documentElement;
                 if (accent) root.style.setProperty('--accent-color', accent);
                 if (accentRgb) root.style.setProperty('--accent-rgb', accentRgb);
 
@@ -1616,6 +1621,11 @@
                         <option value="'Lucida Console', monospace">Lucida Console</option>
                     </select>
                     <div id="font-preview" class="font-preview">The quick brown fox jumps over the lazy dog</div>
+
+                    <label class="bold-toggle-label" style="display:flex;align-items:center;gap:10px;margin-top:10px;cursor:pointer;user-select:none;">
+                        <input id="bold-toggle" type="checkbox" style="width:18px;height:18px;" />
+                        <span>Bold Text</span>
+                    </label>
                 </div>
 
                 <!-- Background Image Section -->
@@ -1726,7 +1736,7 @@
             align-items: center;
             justify-content: center;
             z-index: 10000;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
+            font-family: var(--font-family, 'Product Sans', 'Roboto', system-ui, -apple-system, sans-serif);
         }
 
         .auth-modal {
