feat(theme): add live wallpaper background video

--- a/Docs.html
+++ b/Docs.html
@@ -744,6 +744,7 @@
 
     <script src="page-transitions.js?v=20260106a" defer></script>
     <script src="auth-client.js?v=20260106a"></script>
+    <script src="theme-video.js?v=20260106a"></script>
     <script src="meibot.js?v=20260106a"></script>
     <script>
         // Global state
