--- a/NotesHQ.html
+++ b/NotesHQ.html
@@ -728,6 +728,7 @@
 
     <script src="page-transitions.js?v=20260106a" defer></script>
     <script src="auth-client.js?v=20260106a"></script>
+    <script src="theme-video.js?v=20260106a"></script>
 
     <script>
         // Global state
