--- a/intro.html
+++ b/intro.html
@@ -129,7 +129,7 @@
             margin: 0 auto;
             min-height: 100vh;
             box-sizing: border-box;
-            padding-top: 88px;
+            padding-top: 58px;
             padding-bottom: 28px;
             display: grid;
             gap: 12px;
@@ -205,7 +205,7 @@
             justify-items: center;
             max-width: 1220px;
             /* Reduce bottom-heavy feel by balancing vertical padding in this section only. */
-            padding-top: 70px;
+            padding-top: 40px;
             padding-bottom: 70px;
         }
 
@@ -553,15 +553,17 @@
 
         .intro-features-header h2 {
             margin: 0;
-            font-size: 30px;
+            font-size: 40px;
+            color: rgba(255, 255, 255, 0.98);
         }
 
         .intro-features-desc {
             margin: 8px auto 0;
             max-width: 760px;
-            font-size: 18px;
+            font-size: 22px;
             line-height: 1.5;
             opacity: 0.9;
+            color: rgba(255, 255, 255, 0.92);
             
         }
 
